// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PrismaSelect class should add the selected fields on the args object if the type is aggregate 1`] = `
{
  "_avg": {
    "id": true,
  },
  "_count": {
    "email": true,
  },
  "_max": {
    "id": true,
  },
  "_sum": {
    "id": true,
  },
}
`;

exports[`test PrismaSelect class should back empty object if the path not found 1`] = `{}`;

exports[`test PrismaSelect class should contain default values firstName, lastName 1`] = `
{
  "select": {
    "firstName": true,
    "id": true,
    "lastName": true,
  },
}
`;

exports[`test PrismaSelect class should filter the type depend on the @PrismaSelect comment on the schema file 1`] = `
{
  "select": {
    "firstName": true,
    "id": true,
  },
}
`;

exports[`test PrismaSelect class should get value from nested object and filter by given type 1`] = `
{
  "select": {
    "comments": {
      "select": {
        "contain": true,
        "id": true,
      },
    },
    "id": true,
  },
}
`;

exports[`test PrismaSelect class should get value from nested object more than one deep 1`] = `
{
  "select": {
    "contain": true,
    "id": true,
  },
}
`;

exports[`test PrismaSelect class should merge deep add custom select object to current one 1`] = `
{
  "select": {
    "email": true,
    "id": true,
    "posts": {
      "select": {
        "id": true,
        "title": true,
      },
    },
  },
}
`;

exports[`test PrismaSelect class test nested relations with args 1`] = `
{
  "user": null,
}
`;

exports[`test PrismaSelect class test nested relations with args 2`] = `undefined`;

exports[`test PrismaSelect class test nested relations with args 3`] = `
{
  "select": {
    "email": true,
    "firstName": true,
    "id": true,
    "posts": {
      "distinct": "id",
      "orderBy": {
        "published": "asc",
      },
      "select": {
        "comments": {
          "select": {
            "contain": true,
            "id": true,
          },
          "where": {
            "contain": {
              "contains": "a",
            },
          },
        },
        "id": true,
        "title": true,
      },
      "skip": 5,
      "take": 10,
      "where": {
        "title": {
          "contains": "a",
        },
      },
    },
  },
}
`;

exports[`test PrismaSelect class test nested relations with args 4`] = `
{
  "alias": "user",
  "args": {
    "where": {
      "id": 1,
    },
  },
  "fieldsByTypeName": {
    "User": {
      "email": {
        "alias": "email",
        "args": {},
        "fieldsByTypeName": {},
        "name": "email",
      },
      "fullName": {
        "alias": "fullName",
        "args": {},
        "fieldsByTypeName": {},
        "name": "fullName",
      },
      "id": {
        "alias": "id",
        "args": {},
        "fieldsByTypeName": {},
        "name": "id",
      },
      "name": {
        "alias": "name",
        "args": {},
        "fieldsByTypeName": {},
        "name": "firstName",
      },
      "posts": {
        "alias": "posts",
        "args": {
          "distinct": "id",
          "orderBy": {
            "published": "asc",
          },
          "skip": 5,
          "take": 10,
          "where": {
            "title": {
              "contains": "a",
            },
          },
        },
        "fieldsByTypeName": {
          "Post": {
            "comments": {
              "alias": "comments",
              "args": {
                "where": {
                  "contain": {
                    "contains": "a",
                  },
                },
              },
              "fieldsByTypeName": {
                "Comment": {
                  "contain": {
                    "alias": "contain",
                    "args": {},
                    "fieldsByTypeName": {},
                    "name": "contain",
                  },
                  "id": {
                    "alias": "id",
                    "args": {},
                    "fieldsByTypeName": {},
                    "name": "id",
                  },
                },
              },
              "name": "comments",
            },
            "id": {
              "alias": "id",
              "args": {},
              "fieldsByTypeName": {},
              "name": "id",
            },
            "title": {
              "alias": "title",
              "args": {},
              "fieldsByTypeName": {},
              "name": "title",
            },
          },
        },
        "name": "posts",
      },
    },
  },
  "name": "user",
}
`;
